peac_dev/force-app/main/default/objects/Rate_Card_Rate__c/Rate_Card_Rate__c.object-meta.xml
<CustomObject>
    <label>Rate Card Rate</label>
    <nameField>
        <displayFormat>RCR-{0000}</displayFormat>
        <label>Rate Card Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Card Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>