peac_dev/force-app/main/default/objects/Rate_Card_Rate__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <inlineHelpText>The Rate that is added to the Base Rate used for the transaction if it meets the column and row criteria.</inlineHelpText>
    <label>Rate</label>
    <precision>13</precision>
    <scale>10</scale>
    <type>Percent</type>
</CustomField>