peac_dev/force-app/main/default/objects/Rate_Card_Rate__c/fields/Rate_Card_Column__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_Column__c</fullName>
    <label>Rate Card Column</label>
    <referenceTo>Rate_Card_Column__c</referenceTo>
    <relationshipLabel>Rate Card Rates</relationshipLabel>
    <relationshipName>Rate_Card_Rates</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>