peac_dev/force-app/main/default/objects/Rate_Card_Rate__c/fields/Rate_Card_Name__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_Name__c</fullName>
    <formula>Rate_Card_Column__r.Rate_Card__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Card Name</label>
    <type>Text</type>
</CustomField>