peac_dev/force-app/main/default/objects/Rate_Card_Rate__c/fields/Rate_Card_Rate_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_Rate_Ext_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Rate Card Rate Ext Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>