peac_dev/force-app/main/default/objects/Rate_Card_Rate__c/fields/Rate_Card_Row__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_Row__c</fullName>
    <label>Rate Card Row</label>
    <referenceTo>Rate_Card_Row__c</referenceTo>
    <relationshipLabel>Rate Card Rates</relationshipLabel>
    <relationshipName>Rate_Card_Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>